--- a/css/editoria11y.css
+++ b/css/editoria11y.css
@@ -228,6 +228,12 @@ ed11y-element-result {
     box-shadow: inset 0 0 0 1px #b80519, inset 0 0 0 2px #fefefe, inset 0 0 0 6px #b80519, 0 0 0 3px var(--ed11y-alert, #b80519), 0 0 0 4px transparent;
 }
 
+.ed11y-shut #ed11y-toggle.disabled, .ed11y-shut #ed11y-toggle.disabled:hover {
+    background: #bbb;
+    color: #222;
+    box-shadow: inset 0 0 0 2px #333;
+}
+
 .ed11y-shut .toggle-count {
     display: block;
 }
